adding CSS file

--- a/fire_ball_data.ipynb
+++ b/fire_ball_data.ipynb
@@ -2162,18 +2162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "f4fd48c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_connection_string = \"postgres:Korudo7$@localhost:5432/cad\"\n",
+    "# rds_connection_string = \"postgres:Korudo7$@localhost:5432/cad\"\n",
+    "rds_connection_string = \"postgres:postgres@localhost:5050/cad\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7573e714",
    "metadata": {},
    "outputs": [
@@ -2181,19 +2182,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ELENAC~1\\AppData\\Local\\Temp/ipykernel_8220/4162273999.py:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "C:\\Users\\brand\\AppData\\Local\\Temp/ipykernel_28520/4162273999.py:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
       "  engine.table_names()\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['summary', 'data', 'final', 'fire_ball_data']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2202,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9aa1788f",
    "metadata": {},
    "outputs": [],
