fb data pushed to sqlite

--- a/fire_ball_data.ipynb
+++ b/fire_ball_data.ipynb
@@ -15,7 +15,8 @@
     "import os\n",
     "from pprint import pprint\n",
     "import json\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine, Column, Integer, String, Float\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n"
    ]
   },
   {
@@ -2163,42 +2164,133 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f4fd48c1",
+   "id": "16c85495",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rds_connection_string = \"postgres:Korudo7$@localhost:5432/cad\"\n",
-    "rds_connection_string = \"postgres:postgres@localhost:5050/cad\"\n",
-    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+    "engine = create_engine('sqlite:///cad.sqlite', echo=True)\n",
+    "sqlite_connection = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7573e714",
+   "execution_count": 13,
+   "id": "38c253ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base = declarative_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e00a1bed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build class for the database\n",
+    "class Fireball_data(Base):\n",
+    "    __tablename__ = \"fireball_data\"\n",
+    "    date = Column(String, primary_key = True)\n",
+    "    time = Column (String, primary_key = True)\n",
+    "    energy = Column (Integer)\n",
+    "    impactenergy = Column (Integer)\n",
+    "    latitude = Column (Integer)\n",
+    "    latdirection = Column (String)\n",
+    "    longitude = Column (Integer)\n",
+    "    londirection = Column (String)   \n",
+    "    altitude_km = Column (Integer)\n",
+    "    velocity_kms = Column (Integer)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ea9fdf2b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\brand\\AppData\\Local\\Temp/ipykernel_28520/4162273999.py:1: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
-      "  engine.table_names()\n"
+      "2022-01-19 19:36:58,048 INFO sqlalchemy.engine.Engine PRAGMA main.table_info(\"fireball_data\")\n",
+      "2022-01-19 19:36:58,049 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2022-01-19 19:36:58,052 INFO sqlalchemy.engine.Engine PRAGMA temp.table_info(\"fireball_data\")\n",
+      "2022-01-19 19:36:58,057 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2022-01-19 19:36:58,065 INFO sqlalchemy.engine.Engine \n",
+      "CREATE TABLE fireball_data (\n",
+      "\t\"index\" BIGINT, \n",
+      "\tdate DATE, \n",
+      "\ttime TIME, \n",
+      "\tenergy TEXT, \n",
+      "\timpactenergy TEXT, \n",
+      "\tlatitude TEXT, \n",
+      "\tlatdirection TEXT, \n",
+      "\tlongitude TEXT, \n",
+      "\tlondirection TEXT, \n",
+      "\taltitude_km TEXT, \n",
+      "\tvelocity_kms TEXT\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2022-01-19 19:36:58,069 INFO sqlalchemy.engine.Engine [no key 0.00382s] ()\n",
+      "2022-01-19 19:36:58,668 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-01-19 19:36:58,670 INFO sqlalchemy.engine.Engine CREATE INDEX ix_fireball_data_index ON fireball_data (\"index\")\n",
+      "2022-01-19 19:36:58,672 INFO sqlalchemy.engine.Engine [no key 0.00154s] ()\n",
+      "2022-01-19 19:36:58,841 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "2022-01-19 19:36:58,860 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2022-01-19 19:36:58,877 INFO sqlalchemy.engine.Engine INSERT INTO fireball_data (\"index\", date, time, energy, impactenergy, latitude, latdirection, longitude, londirection, altitude_km, velocity_kms) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+      "2022-01-19 19:36:58,895 INFO sqlalchemy.engine.Engine [generated in 0.02401s] ((0, '2022-01-11', '03:33:13.000000', '126.4', '2.9', '58.4', 'S', '160.2', 'W', '40.8', '22.8'), (1, '2022-01-01', '20:23:04.000000', '14.5', '0.42', '66.1', 'N', '152.6', 'W', '35.5', None), (2, '2021-12-29', '03:15:35.000000', '2.0', '0.073', '69.7', 'S', '115.0', 'E', '44', '22.0'), (3, '2021-12-23', '21:27:58.000000', '2.1', '0.076', '4.9', 'S', '29.6', 'W', '37', None), (4, '2021-12-20', '23:15:55.000000', '3.2', '0.11', '62.7', 'N', '60.3', 'E', '56', '18.2'), (5, '2021-12-10', '01:19:06.000000', '5.0', '0.16', '47.5', 'S', '172.6', 'E', '27.5', None), (6, '2021-11-28', '18:06:50.000000', '4.0', '0.13', '32.6', 'N', '113.5', 'E', '38.4', '19.7'), (7, '2021-11-17', '15:53:21.000000', '2.4', '0.086', '6.8', 'S', '119.1', 'E', '35.0', '23.0')  ... displaying 10 of 30 total bound parameter sets ...  (28, '2021-01-25', '03:01:37.000000', '7.5', '0.23', '38.5', 'N', '47.6', 'W', '19.1', None), (29, '2021-01-24', '07:33:43.000000', '6.1', '0.2', '45.0', 'S', '95.5', 'E', '37.5', None))\n",
+      "2022-01-19 19:36:58,917 INFO sqlalchemy.engine.Engine COMMIT\n"
      ]
     }
    ],
    "source": [
-    "engine.table_names()"
+    "sqlite_table = \"fireball_data\"\n",
+    "fire_ball_data.to_sql(sqlite_table, sqlite_connection, if_exists='fail')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "070a9c54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlite_connection.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f4fd48c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # rds_connection_string = \"postgres:Korudo7$@localhost:5432/cad\"\n",
+    "# rds_connection_string = \"postgres:postgres@localhost:5050/cad\"\n",
+    "# engine = create_engine(f'postgresql://{rds_connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7573e714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "9aa1788f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fire_ball_data.to_sql(name='fire_ball_data', con=engine, if_exists='append', index=False)"
+    "# fire_ball_data.to_sql(name='fire_ball_data', con=engine, if_exists='append', index=False)"
    ]
   },
   {
